--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>12show</title>
+    <meta name="description" content="12show自由部署的H5制作程序">
   </head>
   <body>
     <noscript>
